--- a/src/main/resources/templates/Edit_Departement.html
+++ b/src/main/resources/templates/Edit_Departement.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{Layout}">
+<html xmlns:th="http://www.thymeleaf.org" 
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6" 
+    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" 
+    layout:decorate="~{Layout}">
 
 <body class="d-flex flex-column h-100 bg-light">
 <main class="flex-shrink-0">
