--- a/src/main/resources/templates/List_Celebrites.html
+++ b/src/main/resources/templates/List_Celebrites.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" 
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6" 
     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
     layout:decorate="~{Layout}">
     
@@ -27,9 +28,9 @@
                                         <div class="col-lg-8">
                                             <div>
                                                 <ul>
-                                                    <li th:text="${celebrite.nom}">Nom de la célébrité</li>
-                                                    <li th:text="${celebrite.prenom}">Prénom de la célébrité</li>
-                                                    <li th:text="${celebrite.nationalite}">Nationnalité de la célébrité</li>
+                                                    <li>Nom : <span  th:text="${celebrite.nom}"></span></li>
+                                                    <li>Prénom : <span  th:text="${celebrite.prenom}"></span></li>
+                                                    <li>Nationnalité : <span th:text="${celebrite.nationalite}"></span></li>
                                                 </ul>
                                             </div>
                                             <div style="float: right; display: flex; gap: 30px;" >
