--- a/src/main/resources/templates/List_Lieux.html
+++ b/src/main/resources/templates/List_Lieux.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" 
-    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6" 
+    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" 
     layout:decorate="~{Layout}">
     
     <body class="d-flex flex-column h-100 bg-light">
@@ -39,8 +40,10 @@
                                         <div class="col-lg-8">
                                             <div>
                                                 <ul>
-                                                    <li th:text="${lieu.longitude}">Longitude</li>
-                                                    <li th:text="${lieu.latitude}">Lattitude</li>
+                                                	<li>Département : <span th:text="${lieu.departement.nomDep}"></span></li>
+                                                    <li>Longitude : <span th:text="${lieu.longitude}"></span></li>
+                                                    <li>Lattitude : <span th:text="${lieu.latitude}"></span></li>
+                                                    <li>Code INSEE : <span th:text="${lieu.codeInsee}"></span></li>
 
                                                 </ul>
                                             </div>
