--- a/src/main/resources/templates/List_Monuments.html
+++ b/src/main/resources/templates/List_Monuments.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" 
-    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6" 
+    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" 
     layout:decorate="~{Layout}">
     
     <body class="d-flex flex-column h-100 bg-light">
@@ -16,6 +17,9 @@
 
                         <!-- Section Monument -->
                         <section>
+                        	<div th:if="${param.success}" class="alert alert-success">
+                				Votre compte a bien été créé ! Vous pouvez maintenant vous connecter !
+            				</div>
                         	<div class="d-flex align-items-center justify-content-between mb-4">
                         		<h2></h2>
                                 <a class="btn btn-primary px-4 py-3" th:href="@{/monument/new}">
@@ -35,10 +39,10 @@
                                         <div class="col-lg-8">
                                             <div>
                                                 <ul>
-                                                    <li th:text="${monument.typeM}">Type de monument</li>
-                                                    <li th:text="${monument.proprietaire}">Proprietaire</li>
-                                                    <li th:text="${monument.longitude}">Longitude</li>
-                                                    <li th:text="${monument.latitude}">Latitude</li>
+                                                    <li>Type de monument : <span th:text="${monument.typeM}"></span></li>
+                                                    <li>Proprietaire : <span th:text="${monument.proprietaire}"></span></li>
+                                                    <li>Longitude : <span th:text="${monument.longitude}"></span></li>
+                                                    <li>Latitude : <span th:text="${monument.latitude}"></span></li>
                                                 </ul>
                                             </div>
                                             <div style="float: right; display: flex; gap: 30px;" >
