--- a/src/main/resources/templates/Search_MonumentByNom.html
+++ b/src/main/resources/templates/Search_MonumentByNom.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" 
-    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6" 
+    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" 
     layout:decorate="~{Layout}">
     
     <body class="d-flex flex-column h-100 bg-light">
