--- a/src/main/resources/templates/Register_Form.html
+++ b/src/main/resources/templates/Register_Form.html
@@ -51,6 +51,7 @@
 			                        <div class="form-group" style="margin-top: 20px;">
 			                            <label>Choisir un rôle</label>
 			                            <select class="form-control" th:name="role">
+			                            	<option th:value="Voyagiste">Admin</option>
 			                            	<option th:value="Voyagiste">Voyagiste</option>
 			                            	<option th:value="Touriste">Touriste</option>
 			                            </select>
