--- a/src/main/resources/templates/Layout.html
+++ b/src/main/resources/templates/Layout.html
@@ -31,14 +31,14 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
         <div class="container px-5">
-            <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">Jiang &amp Sarr</span></a>
+            <a class="navbar-brand" th:href="@{/}"><span class="fw-bolder text-primary">Jiang &amp Sarr</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                 
-                    <li class="nav-item"><a class="nav-link" th:href="@{/monuments}">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" th:href="@{/monument/searchLieu}">Rechercher un monument</a></li>
-                    <li class="nav-item"><a class="nav-link" th:href="@{/departements}">Departements</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/}">Accueil</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/calculeD}">Calcul de distance</a></li>
+                    <li class="nav-item"><a class="nav-link" th:href="@{/monuments}">Rechercher un monument</a></li>
                     
                     <!-- Invisible quand l'utilisateur est connecté -->
                     <li th:unless="${#authorization.expression('isAuthenticated()')}" class="nav-item"><a class="nav-link" th:href="@{/login}">Connexion</a></li>
@@ -78,6 +78,8 @@
             </div>
         </div>
     </footer>
+    
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWJ9YYZODVaE-sFoHsM6qhSx7ir8j-7pE&callback=initMap&libraries=geometry" defer></script>
     
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
