--- a/src/main/resources/templates/celebriteDetails.html
+++ b/src/main/resources/templates/celebriteDetails.html
@@ -9,38 +9,19 @@
 
             <!-- Page Content-->
             <div layout:fragment="body" class="container px-5 my-5">
-            	<div>
-            		<form th:action="@{/monuments/search}" class="col-lg-11 col-xl-9 col-xxl-8">
-                		<input name="query" class="form-control mr-sm-2 mb-5" type="search" placeholder="Rechercher un monument" aria-label="Search">
-                	</form>
-            	</div>
                 <div class="text-center mb-5">
-                    <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Liste des monuments</span></h1>
+                    <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Monument(s)  associé(s) à la célébrité : </span> <span class="text-gradient d-inline" th:text="${celebrite.nom}"></span></h1>
                 </div>
                 <div class="row gx-5 justify-content-center">
                     <div class="col-lg-11 col-xl-9 col-xxl-8">
 
-                        <!-- Section Monument -->
+                        <!-- Section Monument details -->
                         <section>
-                        	<div th:if="${param.success}" class="alert alert-success">
-                				Votre compte a bien été créé ! Vous pouvez maintenant vous connecter !
-            				</div>
-                        	<div class="d-flex align-items-center justify-content-between mb-4">
-                        		<div class="d-flex align-items-center">
-				                    <a class="mx-3" th:href="@{/monument/searchLieu}">Rechercher par lieu</a>
-				                    <a class="mx-3" th:href="@{/monument/searchDept}">Rechercher par département</a>
-				                    <a class="mx-3" th:href="@{/monument/searchNom}">Rechercher par nom</a>
-				                </div>
-                                <a class="btn btn-primary px-4 py-3" th:href="@{/monument/new}">
-                                    Ajouter un monument
-                                </a>
-                            </div>
                             <div th:each="monument : ${monuments}" class="card shadow border-0 rounded-4 mb-5">
                                 <div class="card-body p-5">
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
-                                                
                                                 <div th:text="${monument.nom}" class="text-primary fw-bolder mb-2">Nom du monument</div>
                                                 <div th:text="${monument.codeLieu.nomCom}" class="small fw-bolder">Localisation du monument</div>
                                             </div>
