--- a/src/main/resources/templates/Create_Lieu.html
+++ b/src/main/resources/templates/Create_Lieu.html
@@ -76,7 +76,7 @@
 									
 									<div class="d-flex align-items-center justify-content-between mb-4">
 		                        		<h2></h2>
-		                                <a class="btn btn-primary px-4 py-3" th:href="@{/departement/new}">
+		                                <a class="btn btn-secondary px-4 py-3" th:href="@{/departement/new}">
                                             Ajouter un département
 		                                </a>
 		                            </div>
