--- a/src/main/resources/templates/Create_Monument.html
+++ b/src/main/resources/templates/Create_Monument.html
@@ -101,7 +101,7 @@
 									
 									<div class="d-flex align-items-center justify-content-between mb-4">
 		                        		<h2></h2>
-		                                <a class="btn btn-primary px-4 py-3" th:href="@{/lieu/new}">
+		                                <a class="btn btn-secondary px-4 py-3" th:href="@{/lieu/new}">
                                             Ajouter un lieu
 		                                </a>
 		                            </div>
