--- a/src/main/resources/templates/List_Monuments.html
+++ b/src/main/resources/templates/List_Monuments.html
@@ -31,7 +31,7 @@
 				                    <a class="mx-3" th:href="@{/monument/searchDept}">Rechercher par département</a>
 				                    <a class="mx-3" th:href="@{/monument/searchNom}">Rechercher par nom</a>
 				                </div>
-                                <a class="btn btn-primary px-4 py-3" th:href="@{/monument/new}">
+                                <a class="btn btn-primary px-4 py-3" th:href="@{/monument/new}" sec:authorize="hasRole('ROLE_Voyagiste') or hasRole('ROLE_Admin')">
                                     Ajouter un monument
                                 </a>
                             </div>
@@ -56,8 +56,8 @@
                                             </div>
                                             <div style="float: right; display: flex; gap: 30px;" >
                                             	<a class="btn btn-primary px-4" th:href="@{/monument/{numMonum}/details(numMonum=${monument.geohash})}">Voir les célébrités</a>
-                                            	<a class="btn btn-primary px-4" th:href="@{/monument/{numMonum}/edit(numMonum=${monument.geohash})}">Modifier</a>
-                                            	<a class="btn btn-primary px-4" th:href="@{/monument/{numMonum}/delete(numMonum=${monument.geohash})}">Supprimer</a>
+                                            	<a class="btn btn-primary px-4" th:href="@{/monument/{numMonum}/edit(numMonum=${monument.geohash})}" sec:authorize="hasRole('ROLE_Voyagiste') or hasRole('ROLE_Admin')">Modifier</a>
+                                            	<a class="btn btn-primary px-4" th:href="@{/monument/{numMonum}/delete(numMonum=${monument.geohash})}" sec:authorize="hasRole('ROLE_Admin')">Supprimer</a>
                                             </div>
                                         </div>
                                     </div>
