--- a/src/main/resources/templates/Layout.html
+++ b/src/main/resources/templates/Layout.html
@@ -79,7 +79,7 @@
         </div>
     </footer>
     
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWJ9YYZODVaE-sFoHsM6qhSx7ir8j-7pE&callback=initMap&libraries=geometry" defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=NOM_DE_LA_CLE&callback=initMap&libraries=geometry" defer></script>
     
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
